// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a headline with children properly 1`] = `
<div
  className="sc-bdVaJa hcJFwa"
>
  <div
    className="sc-bwzfXH jUQFso"
  >
    <h1
      className="sc-ifAKCX cFlEyZ sc-htpNat jAwvHb"
      fontFamily={
        Object {
          "fontFamily": "'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif",
          "fontWeight": 600,
        }
      }
      fontSize={
        Array [
          "26px",
          "32px",
        ]
      }
    >
      <div>
        Child 
        title
      </div>
    </h1>
  </div>
</div>
`;

exports[`renders a news headline properly 1`] = `
<div
  className="sc-bdVaJa hcJFwa"
>
  <div
    className="sc-bwzfXH jUQFso"
  >
    <h1
      className="sc-ifAKCX cFlEyZ sc-htpNat jAwvHb"
      fontFamily={
        Object {
          "fontFamily": "'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif",
          "fontWeight": 600,
        }
      }
      fontSize={
        Array [
          "26px",
          "32px",
        ]
      }
    >
      The oldest known depiction of a supernova was found in a work of 5,000 year old rock art, scientists believe.
    </h1>
  </div>
</div>
`;
